salesforce/force-app/main/default/objects/PSV_Exception__c/PSV_Exception__c.object-meta.xml
<CustomObject>
    <description>Credentialing exception / discrepancy from PSV reconciliation</description>
    <label>PSV Exception</label>
    <pluralLabel>PSV Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>