salesforce/force-app/main/default/objects/PSV_Exception__c/fields/Credentialing_Application__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Application__c</fullName>
    <label>Credentialing Application</label>
    <referenceTo>Credentialing_Application__c</referenceTo>
    <relationshipLabel>PSV Exceptions</relationshipLabel>
    <relationshipName>PSV_Exceptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>