salesforce/force-app/main/default/objects/PSV_Exception__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>missing</fullName><default>false</default><label>Missing</label></value>
            <value><fullName>expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>mismatch</fullName><default>false</default><label>Mismatch</label></value>
            <value><fullName>verification_failure</fullName><default>false</default><label>Verification Failure</label></value>
            <value><fullName>human_review</fullName><default>false</default><label>Human Review</label></value>
            <value><fullName>other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>