salesforce/force-app/main/default/objects/PSV_Exception__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>informational</fullName><default>false</default><label>Informational</label></value>
            <value><fullName>warning</fullName><default>false</default><label>Warning</label></value>
            <value><fullName>critical</fullName><default>false</default><label>Critical</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>