salesforce/force-app/main/default/objects/PSV_Exception__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>open</fullName><default>true</default><label>Open</label></value>
            <value><fullName>in_progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>resolved</fullName><default>false</default><label>Resolved</label></value>
            <value><fullName>waived</fullName><default>false</default><label>Waived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>